k8s/products/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  labels:
    app: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: adan762/products:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8002
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8002
            initialDelaySeconds: 30
