k8s/products/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products
spec:
  selector:
    app: products
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
