k8s/products/products-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tinka.local
      http:
        paths:
          - path: /api/products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: products
                port:
                  number: 8002
